--- a/main/templates/pages/home.html
+++ b/main/templates/pages/home.html
@@ -1,11 +1,12 @@
 {% extends '../base.html' %}
 {% load static %}
 
-{% block title %}Django Ajax CRUD{% endblock %}
+{% block title %}Home{% endblock %}
 
 {% block content %}
-meong
-{% endblock %}
-{% block javascript %}
 
+
+{% endblock %}
+
+{% block javascript %}
 {% endblock javascript %}
